--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ nav ul li{
 }
 
 .bottom{
-    position: fixed;
+    position: sticky;
     height: 150px;
     width: 100%;
     background-color: black;
